Added base layout for the initial parameters page

--- a/translations/fr-ca.yaml
+++ b/translations/fr-ca.yaml
@@ -11,4 +11,4 @@ initial-parameters-form:
   monitors-number: Nombre de moniteurs
   speakers-number: Nombre de haut-parleurs
   probes-number: Nombre de sondes
-
+  confirm: Confirmer
