--- a/translations/fr-ca.yaml
+++ b/translations/fr-ca.yaml
@@ -13,9 +13,13 @@ initial-parameters-form:
   probes-number: Nombre de sondes
   confirm: Confirmer
 probe-initialization:
-  title: Routine d'initialization
+  title: Routine d'initialisation
   description: Détermination de la position des sondes...
 probe-positioning:
   instructions: Veuillez placer les haut-parleurs et les sondes de façon uniforme dans la zone désirée, puis lancez la routine d'initialisation
   run: Lancer la routine d'initialisation
   title: Placement des sondes
+probe-positions:
+  title: Confirmation des positions
+  rerun: Relancer la routine d'initialisation
+  confirm: Confirmer
