--- a/translations/fr-ca.yaml
+++ b/translations/fr-ca.yaml
@@ -19,9 +19,13 @@ optimization:
   title: Optimisation
   yes: Oui
 probe-initialization:
-  title: Routine d'initialization
+  title: Routine d'initialisation
   description: Détermination de la position des sondes...
 probe-positioning:
   instructions: Veuillez placer les haut-parleurs et les sondes de façon uniforme dans la zone désirée, puis lancez la routine d'initialisation
   run: Lancer la routine d'initialisation
   title: Placement des sondes
+probe-positions:
+  title: Confirmation des positions
+  rerun: Relancer la routine d'initialisation
+  confirm: Confirmer
