Made some css tweaks and added the optimal positions page

--- a/translations/fr-ca.yaml
+++ b/translations/fr-ca.yaml
@@ -39,3 +39,7 @@ probe-positions:
   title: Confirmation des positions
   rerun: Relancer la routine d'initialisation
   confirm: Confirmer
+optimal-positions:
+  title: Positions optimales
+  rerun: Relancer la routine d'optimisation
+  confirm: Confirmer
