Add power off button component

--- a/translations/fr-ca.yaml
+++ b/translations/fr-ca.yaml
@@ -43,3 +43,6 @@ optimal-positions:
   title: Positions optimales
   rerun: Relancer la routine d'optimisation
   confirm: Confirmer
+power-button:
+  on: On
+  off: Off
