Added events for knobs and graph eq sliders

--- a/translations/fr-ca.yaml
+++ b/translations/fr-ca.yaml
@@ -51,6 +51,7 @@ eq:
   frequency: FREQ (Hz)
   q: Q
   gain: Gain (dB)
+  gain-short: Gain
 channel-details:
   graphic: Graph
   parametric: Param
