Added linear interpolation for 5 to 31 bands

--- a/translations/fr-ca.yaml
+++ b/translations/fr-ca.yaml
@@ -52,6 +52,7 @@ eq:
   q: Q
   gain: Gain (dB)
   gain-short: Gain
+  frequency-symbol: Hz
 channel-details:
   graphic: Graph
   parametric: Param
