Add save config to file button

--- a/translations/fr-ca.yaml
+++ b/translations/fr-ca.yaml
@@ -56,6 +56,8 @@ eq:
 channel-details:
   graphic: Graph
   parametric: Param
+console:
+  save: Sauvegarder
 volume-gain:
   volume: vol
   gain: gain
