--- a/translations/fr-ca.yaml
+++ b/translations/fr-ca.yaml
@@ -56,6 +56,9 @@ eq:
 channel-details:
   graphic: Graph
   parametric: Param
+  tabs:
+    eq: EQ
+    input-volumes: Volumes
 console:
   save: Sauvegarder
 gain:
