Remove save button and add sidebar

--- a/translations/fr-ca.yaml
+++ b/translations/fr-ca.yaml
@@ -77,3 +77,6 @@ eq-graph:
     eq-gain: Gains de l'EQ
     channel-spectrums: Spectre de l'entrée
     channels-spectrums: Spectres additionnés des autres entrées
+sidebar:
+  main-menu: Menu principal
+  close: Quitter
