--- a/translations/fr-ca.yaml
+++ b/translations/fr-ca.yaml
@@ -39,6 +39,9 @@ probe-positions:
   title: Confirmation des positions
   rerun: Relancer la routine d'initialisation
   confirm: Confirmer
+  symmetry-title: Veuillez sélectionner la bonne configuration de la salle
+  first-symmetry: Première
+  second-symmetry: Deuxième
 optimal-positions:
   title: Positions optimales
   rerun: Relancer la routine d'optimisation
